samples/_failures_safe/1761219994_d4d52c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fbc721b8.c: In function ‘matrix_determinant’:
./samples/SAFE/__tmp_fbc721b8.c:132:39: error: expected ‘;’ at end of input
  132 |     if (m->rows != m->cols) return 0.0
      |                                       ^
      |                                       ;
./samples/SAFE/__tmp_fbc721b8.c:132:5: error: expected declaration or statement at end of input
  132 |     if (m->rows != m->cols) return 0.0
      |     ^~
